--- a/Bukkit/AbstractImpl/Abstraction-v1_4_5/pom.xml
+++ b/Bukkit/AbstractImpl/Abstraction-v1_4_5/pom.xml
@@ -30,6 +30,11 @@
             <version>API</version>
         </dependency>
         <dependency>
+            <groupId>com.turt2live.antishare</groupId>
+            <artifactId>AntiShare-Bukkit-vPre</artifactId>
+            <version>Bukkit-vPre</version>
+        </dependency>
+        <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
             <version>1.4.5-R1.0</version>
