--- a/Bukkit/AbstractImpl/Abstraction-v1_4_6/pom.xml
+++ b/Bukkit/AbstractImpl/Abstraction-v1_4_6/pom.xml
@@ -30,6 +30,11 @@
             <version>API</version>
         </dependency>
         <dependency>
+            <groupId>com.turt2live.antishare</groupId>
+            <artifactId>AntiShare-Bukkit-v1_4_5</artifactId>
+            <version>Bukkit-v1_4_5</version>
+        </dependency>
+        <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
             <version>1.4.6-R0.3</version>
