--- a/Bukkit/AbstractImpl/Abstraction-v1_6_R1/pom.xml
+++ b/Bukkit/AbstractImpl/Abstraction-v1_6_R1/pom.xml
@@ -35,6 +35,11 @@
             <version>1.6.1-R0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>com.turt2live.antishare</groupId>
+            <artifactId>AntiShare-Bukkit-v1_5_R3</artifactId>
+            <version>Bukkit-v1_5_R3</version>
+        </dependency>
+        <dependency>
             <groupId>com.turt2live</groupId>
             <artifactId>Hurtle</artifactId>
             <version>0.0.2-SNAPSHOT</version>
