Add block break handling

--- a/Bukkit/AntiShare/src/main/resources/group.yml
+++ b/Bukkit/AntiShare/src/main/resources/group.yml
@@ -54,6 +54,8 @@ lists:
     - gold block
     - iron block
     - bedrock
+    break:
+    - bedrock
 
 # Block configuration. This gives you the ability to customize the block
 # aspects of AntiShare. More information can be found at the link listed
