--- a/DevTools/BukkitPlugin/pom.xml
+++ b/DevTools/BukkitPlugin/pom.xml
@@ -36,6 +36,13 @@
             <artifactId>bukkit</artifactId>
             <version>1.7.9-R0.1-SNAPSHOT</version>
         </dependency>
+
+        <!-- JSSC -->
+        <dependency>
+            <groupId>org.scream3r</groupId>
+            <artifactId>jssc</artifactId>
+            <version>2.8.0</version>
+        </dependency>
     </dependencies>
 
     <repositories>
@@ -62,6 +69,28 @@
                     <source>1.6</source>
                     <target>1.6</target>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>1.4</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <minimizeJar>false</minimizeJar>
+                            <artifactSet>
+                                <includes>
+                                    <include>org.scream3r:*</include>
+                                </includes>
+                            </artifactSet>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
 
             <plugin>
