--- a/AntiShare-API/pom.xml
+++ b/AntiShare-API/pom.xml
@@ -26,6 +26,13 @@
             <version>1.2</version>
         </dependency>
 
+        <!-- DevTools -->
+        <dependency>
+            <groupId>com.turt2live.antishare</groupId>
+            <artifactId>AntiShare-DevTools-API</artifactId>
+            <version>DevTools-API</version>
+        </dependency>
+
         <!-- JUnit -->
         <dependency>
             <groupId>junit</groupId>
