Add item drop and pickup

--- a/Bukkit/AntiShare/src/main/resources/group.yml
+++ b/Bukkit/AntiShare/src/main/resources/group.yml
@@ -65,6 +65,10 @@ lists:
     item-use:
     - flint and steel
     - exp bottle
+    drop:
+    - all
+    pickup:
+    - all
 
 # Block configuration. This gives you the ability to customize the block
 # aspects of AntiShare. More information can be found at the link listed
