--- a/Bukkit/AntiShare/src/main/resources/lang.yml
+++ b/Bukkit/AntiShare/src/main/resources/lang.yml
@@ -35,11 +35,15 @@ naughty:
         command: '&c@p &7tried to use the command &c@v'
         interact: '&c@p &7tried to interact with &c@v'
         use: '&c@p &7tried to use &c@v'
+        drop: '&c@p &7tried to drop &c@v'
+        pickup: '&c@p &7tried to pickup &c@v'
     place: '&cYou cannot place that &4@v'
     break: '&cYou cannot break that &4@v'
     command: '&cYou cannot use the command &4@v'
     interact: '&cYou cannot interact with that &4@v'
     use: '&cYou cannot use that &4@v'
+    drop: '&cYou cannot drop that &4@v'
+    pickup: '&cYou cannot pickup that &4@v'
 general:
     reloading: '&7Reloading'
     reloaded: '&aReload completed!'
