Add 'All In One' for later, when it is more useful

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <module>Bukkit/AbstractImpl/Abstraction-v1_7_R2</module>
         <module>Bukkit/AbstractImpl/Abstraction-v1_7_R3</module>
         <module>DevTools/BukkitPlugin</module>
+        <module>AntiShare-AllInOne</module>
     </modules>
 
     <repositories>
