Add tool integration for entity types

--- a/Bukkit/AntiShare/src/main/resources/lang.yml
+++ b/Bukkit/AntiShare/src/main/resources/lang.yml
@@ -63,16 +63,19 @@ tools:
     check-title: '&bAntiShare Check Tool'
     set-title: '&bAntiShare Set Tool'
     check-lore:
-    - '&eClick a block to see what'
+    - '&eClick a block/entity to see what'
     - '&egamemode it is.'
     set-lore:
-    - '&eLeft click a block to set'
-    - '&ethe gamemode of the block'
-    - '&6Right click a block to clear'
-    - '&6the gamemode of the block'
+    - '&eLeft click a block/entity to set'
+    - '&ethe gamemode of the block/entity'
+    - '&6Right click a block/entity to clear'
+    - '&6the gamemode of the block/entity'
     on-check: '&7That is a &b@g &7block'
     on-set: '&7Block set as &b@g'
     on-unset: '&7Block type removed, was &b@g'
+    on-check-entities: '&7That is a &b@g &7entity'
+    on-set-entities: '&7Entity set as &b@g'
+    on-unset-entities: '&7Entity type removed, was &b@g'
     on-get: '&2You now have the AntiShare tools'
 errors:
     internal: '&cSevere internal error. Please contact your administrator.'
