--- a/Bukkit/AntiShare/src/main/resources/lang.yml
+++ b/Bukkit/AntiShare/src/main/resources/lang.yml
@@ -37,6 +37,10 @@ naughty:
         use: '&c@p &7tried to use &c@v'
         drop: '&c@p &7tried to drop &c@v'
         pickup: '&c@p &7tried to pickup &c@v'
+        entity-place: '&c@p &7tried to place a &c@v'
+        entity-break: '&c@p &7tried to break a &c@v'
+        entity-attack: '&c@p &7tried to attack a &c@v'
+        entity-interact: '&c@p &7tried to interact with a &c@v'
     place: '&cYou cannot place that &4@v'
     break: '&cYou cannot break that &4@v'
     command: '&cYou cannot use the command &4@v'
@@ -44,6 +48,10 @@ naughty:
     use: '&cYou cannot use that &4@v'
     drop: '&cYou cannot drop that &4@v'
     pickup: '&cYou cannot pickup that &4@v'
+    entity-place: '&cYou cannot place that &4@v'
+    entity-break: '&cYou cannot break that &4@v'
+    entity-attack: '&cYou cannot attack that &4@v'
+    entity-interact: '&cYou cannot interact with that &4@v'
 general:
     reloading: '&7Reloading'
     reloaded: '&aReload completed!'
